--- a/index.html
+++ b/index.html
@@ -4643,7 +4643,7 @@
                                                                                             <a href="#"><i class="fas fa-tshirt"></i> Uniforms</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="medical">
-                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Medical</a>
+                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Wellness & Care</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="enrollment">
                                                                                             <a href="#"><i class="fas fa-user-check"></i> Enrollment</a>
