--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
                                                                             
                                                                         <head>
                                                                             <meta charset="UTF-8">
-                                                                            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                                                            <meta name="viewport" content="width=device-width, initialff-scale=1.0">
                                                                             <title>Student Portal</title>
                                                                             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
                                                                             <style>
@@ -4625,7 +4625,7 @@
                                                                                         
                                                                                         <div class="nav-category">ADMINISTRATIVE</div>
                                                                                         <li class="nav-item" data-section="requirements">
-                                                                                            <a href="#"><i class="fas fa-file-alt"></i> Requirements</a>
+                                                                                            <a href="#"><i class="fas fa-file-alt"></i> Credential Management</a>
                                                                                             <span class="notification-badge" id="requirements-badge">6</span>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="account">
