Update section titles from 'Requirements' to 'Compliance'

--- a/index.html
+++ b/index.html
@@ -5975,9 +5975,9 @@
                                                                                     <!-- Requirements Section -->
                                                                                     <div id="requirements" class="content-section">
                                                                                         <div class="breadcrumb">
-                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Document Requirements</span>
+                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Document Compliance</span>
                                                                                         </div>
-                                                                                        <h1 class="page-title">Document Requirements</h1>
+                                                                                        <h1 class="page-title">Document Compliance</h1>
                                                                                         
                                                                                         <div class="card">
                                                                                             <div class="card-header">
