--- a/index.html
+++ b/index.html
@@ -6818,7 +6818,7 @@
                                                                                     <!-- Clearance Section -->
                                                                                     <div id="clearance" class="content-section">
                                                                                         <div class="breadcrumb">
-                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Clearance</span>
+                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Clearance Tracker</span>
                                                                                         </div>
                                                                                         <h1 class="page-title">Clearance Status</h1>
                                                                                         
