--- a/index.html
+++ b/index.html
@@ -4652,7 +4652,7 @@
                                                                                             <a href="#"><i class="fas fa-tshirt"></i>  Uniforms Compliance</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="medical">
-                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Medical</a>
+                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Wellness & Care</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="enrollment">
                                                                                             <a href="#"><i class="fas fa-user-check"></i> Enrollment</a>
@@ -6911,7 +6911,7 @@
                                                                                     <!-- Medical Section -->
                                                                                     <div id="medical" class="content-section">
                                                                                         <div class="breadcrumb">
-                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Health & Care</span>
+                                                                                            <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Wellness & Care</span>
                                                                                         </div>
                                                                                         <h1 class="page-title">Health & Care</h1>
 
