--- a/index.html
+++ b/index.html
@@ -4975,7 +4975,7 @@
                                                                                                 </div>
                                                                                                 <div class="stat-item">
                                                                                                     <div class="stat-number">8</div>
-                                                                                                    <div class="stat-label">Semester</div>
+                                                                                                    <div class="stat-label">ACADEMIC TERMS</div>
                                                                                                 </div>
                                                                                                 <div class="stat-item">
                                                                                                     <div class="stat-number">150+</div>
