Update subject code label in semester sections

--- a/index.html
+++ b/index.html
@@ -4649,7 +4649,7 @@
 
                                                                                         <div class="nav-category">OTHERS</div>
                                                                                         <li class="nav-item" data-section="uniforms">
-                                                                                            <a href="#"><i class="fas fa-tshirt"></i>  Uniforms Compliance</a>
+                                                                                            <a href="#"><i class="fas fa-tshirt"></i>  Uniform Compliance</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="medical">
                                                                                             <a href="#"><i class="fas fa-clinic-medical"></i> Wellness & Care</a>
@@ -5039,7 +5039,7 @@
                                                                                                             <h5>First Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5087,7 +5087,7 @@
                                                                                                             <h5>Second Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5140,7 +5140,7 @@
                                                                                                             <h5>First Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5188,7 +5188,7 @@
                                                                                                             <h5>Second Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5241,7 +5241,7 @@
                                                                                                             <h5>First Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5289,7 +5289,7 @@
                                                                                                             <h5>Second Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5336,7 +5336,7 @@
                                                                                                             <h5>First Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
@@ -5378,7 +5378,7 @@
                                                                                                             <h5>Second Semester</h5>
                                                                                                             <div class="subjects-table">
                                                                                                                 <div class="subject-row header">
-                                                                                                                    <div class="subject-code">Code</div>
+                                                                                                                    <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
